# rfshop

./: .gitignore  README.md  pyproject.toml  test_rfshop.py
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: find-part
rfshop/: adapters.py  cli.py  extract.py  fetch.py  index.py  llm.py  rank.py  registry.py  vendors.yaml  web.py
skills/find-part/: SKILL.md
